<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_details_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_constraintBottom_toTopOf="@id/item_title_textview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.06"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/cover_imageview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_launcher_background" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/item_title_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="TextView"
            android:textSize="24dp"
            app:layout_constraintBottom_toTopOf="@id/horizontal_scroll_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_view"
            app:layout_constraintVertical_bias="0.120000005" />

        <HorizontalScrollView
            android:id="@+id/horizontal_scroll_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:scrollbars="none"
            app:layout_constraintBottom_toTopOf="@+id/description_textview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_title_textview">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/genre_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="TextView"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/esrb_rating_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="TextView"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/developer_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="TextView"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/publisher_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="TextView"
                    android:textSize="16dp" />
            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/description_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="TextView"
            app:layout_constraintBottom_toTopOf="@id/platform_textview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/horizontal_scroll_view" />

        <TextView
            android:id="@+id/platform_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="TextView"
            android:textSize="16dp"
            app:layout_constraintBottom_toTopOf="@+id/release_date_textview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_textview" />

        <TextView
            android:id="@+id/release_date_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="TextView"
            android:textSize="16dp"
            app:layout_constraintBottom_toTopOf="@id/user_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/platform_textview"
            app:layout_constraintVertical_bias="0.86" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/user_list"
            android:layout_width="301dp"
            android:layout_height="201dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@id/constraint_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/release_date_textview" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:src="@android:drawable/ic_menu_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.578"
            app:layout_constraintStart_toEndOf="@+id/user_list" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/delete_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:src="@android:drawable/ic_delete"
            app:layout_constraintBottom_toTopOf="@+id/add_game"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.578"
            app:layout_constraintStart_toEndOf="@+id/user_list"
            app:layout_constraintTop_toBottomOf="@+id/description_textview"
            app:layout_constraintVertical_bias="0.907" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>