<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeItem"
        android:icon="@android:drawable/btn_star_big_off"
        android:title="Home" />

    <item
        android:id="@+id/gameDetailsItem"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="Game Details" />
</menu>