...
        app:layout_constraintBottom_toTopOf="@+id/options_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/search_query_edittext"
            android:layout_width="342dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
...

    <LinearLayout
        android:id="@+id/options_layout"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/game_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_linear_layout">

        <Button
            android:id="@+id/saved_games"
...
